--- a/formulir.html
+++ b/formulir.html
@@ -90,9 +90,8 @@
                         <button type="button" class="btn btn-sm btn-success btn-tooltip" data-toggle="tooltip"
                             data-placement="top" title="" data-container="body" data-animation="true"
                             data-original-title="Pendaftaran Berakhir pada Sabtu, 3 February 2024">COCONUT OPEN CLASS
-                            BATCH 3</button>
-                        <h3 class=" text-white"><span class="text-white display-4">Pengenalan Sistem Operasi dan Praktik
-                                Perintah Dasar Linux</span></h3>
+                            BATCH 1</button>
+                        <h3 class=" text-white"><span class="text-white display-4">Svelte</span></h3>
                         <!-- <small class="text-uppercase font-weight-bold">Informasi!</small> -->
                     </div>
 
@@ -121,34 +120,36 @@
                                 <div class="tab-pane fade show active" id="tabs-icons-text-1" role="tabpanel"
                                     aria-labelledby="tabs-icons-text-1-tab">
                                     <p class="description"><b>Tipe :</b> Open Class<br>
-                                        <b>Pemateri 1 :</b> Ahmad Fathir <br>
-                                        <b>Pemateri 2 :</b> Muh. Dzikri Alfauzan Nuzul <br>
+                                        <b>Pemateri :</b> Nurman Awaluddin <br>
                                         <b>Moderator :</b> Windu Yoga Nugraha<br>
-                                        <b>Tema :</b> Pengenalan Sistem Operasi dan Praktik Perintah Dasar Linux<br>
+                                        <b>Materi :</b> Svelte <br>
                                         <b>Tempat :</b> Algo Coffee & Snacks, Jl Emmy Saelan III (No.70)<br>
                                     </p>
 
-                                    <p class="description"><b>Deskripsi:</b> Bayangkan kamu baru saja mendapat komputer
-                                        baru dan ingin memaksimalkan penggunaannya. Linux adalah sistem operasi yang
-                                        kuat dan fleksibel, yang memungkinkan kamu untuk melakukan banyak hal dengan
-                                        efisien. Dengan memahami konsep dasar sistem operasi dan perintah dasar Linux,
-                                        kamu akan memiliki kendali penuh atas komputer kamu.
+                                    <p class="description"><b>Deskripsi:</b> Bayangkan kamu ingin membangun aplikasi web
+                                        yang cepat, interaktif, dan ringan. Svelte adalah framework JavaScript modern
+                                        yang mempermudah proses pengembangan dengan sintaks yang sederhana dan efisien.
+                                        Berbeda dengan framework lainnya, Svelte melakukan kompilasi kode pada waktu
+                                        build, bukan saat runtime, sehingga menghasilkan aplikasi yang lebih cepat dan
+                                        performa lebih baik.
                                         <br><br>
-                                        Di Coconut Open Class ini, kami akan membahas pengenalan sistem operasi,
-                                        konsep-konsep dasar Linux, dan praktik perintah-perintah dasarnya. Dengan
-                                        pengetahuan ini, kamu akan dapat mengoperasikan Linux dengan mudah, mengelola
-                                        sistem, dan menjalankan berbagai tugas dengan lebih efektif.
+                                        Di Coconut Open Class ini, kami akan membahas pengenalan Svelte, konsep-konsep
+                                        dasar pengembangannya, dan bagaimana memulai proyek dengan Svelte. Kamu akan
+                                        belajar cara membuat komponen, mengelola state, dan membangun aplikasi web yang
+                                        responsif dan ringan.
                                         <br> <br>
-                                        Jangan lewatkan kesempatan untuk belajar dan menguasai teknologi ini. Daftarkan
-                                        diri kamu segera dan mulailah perjalananmu dalam dunia Linux.
+                                        Jangan lewatkan kesempatan ini untuk memperdalam pengetahuan dan menguasai
+                                        teknologi Svelte. Daftarkan diri kamu sekarang dan mulai perjalananmu dalam
+                                        pengembangan web modern!
                                     </p>
 
 
                                     <button type="button" class="btn btn-outline-default"><i
-                                            class="ni ni-calendar-grid-58 mr-2"></i> <b>Sabtu,
-                                            10 Agustus 2024</b> 08:00 WITA - Selesai</button>
+                                            class="ni ni-calendar-grid-58 mr-2"></i> <b>Kamis,
+                                            10 Oktober 2024</b> 08:00 WITA - Selesai</button>
                                     <br><br>
-                                    <span>Informasi lebih lanjut Hubungi <a href="wa.me/6285341847801">Syahrul Ramadhan</a></span>
+                                    <span>Informasi lebih lanjut Hubungi <a href="https://wa.me/62895605378736">Fikri
+                                            Haekal</a></span>
                                 </div>
                                 <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel"
                                     aria-labelledby="tabs-icons-text-2-tab">
@@ -170,17 +171,11 @@
                                     aria-labelledby="tabs-icons-text-3-tab">
 
                                     <p class="description">
-                                        <b>Pendaftaran Berbayar</b><br>
+                                        <b>Pendaftaran Gratis</b><br>
                                         1. Sertifikat <br>
                                         2. Modul Pembelajaran <br>
                                         3. Ilmu Bermanfaat <br>
                                         4. Relasi <br>
-
-                                        <br>
-                                        <b>Pendaftaran Gratis</b><br>
-                                        1. Ilmu Bermanfaat <br>
-                                        2. Relasi <br>
-
                                     </p>
                                 </div>
                             </div>
@@ -235,11 +230,9 @@
 
                                     <br>
                                     <small class="text-uppercase text-muted font-weight">
-                                        Raih kesempatan eksklusif untuk mengakses Modul Materi dan Sertifikat!
+                                        Nikmati kesempatan eksklusif untuk mengakses Modul Materi dan Sertifikat secara gratis!
                                         <br><br>
-                                        Cukup bayar Rp 15.000 ke DANA 0752757457 a.n. Ahmad Faisal
-                                        <br><br>
-                                        Upload bukti follow instagram @coconutdotorg
+                                        Cukup upload bukti follow Instagram @coconutdotorg untuk mendapatkan akses penuh.
                                     </small>
                                     <div class="form-group mb-3">
                                         <div class="input-group input-group-alternative">
@@ -247,7 +240,7 @@
                                                 <input type="file" class="custom-file-input" id="gambarInput"
                                                     name="file" accept=".jpeg, .jpg, .png">
                                                 <label class="custom-file-label" for="gambarInput">Upload Bukti
-                                                    Transfer</label>
+                                                    Follow</label>
                                             </div>
                                         </div>
 
@@ -342,4 +335,5 @@
 <script src="assets/js/formulir.js"></script>
 <script src="../script.js"></script>
 <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+
 </html>
