--- a/formulir.html
+++ b/formulir.html
@@ -121,7 +121,7 @@
                                     aria-labelledby="tabs-icons-text-1-tab">
                                     <p class="description"><b>Tipe :</b> Open Class<br>
                                         <b>Pemateri :</b> Nurman Awaluddin <br>
-                                        <b>Moderator :</b> Windu Yoga Nugraha<br>
+                                        <b>Moderator :</b> Andi Citra Ayu Lestari<br>
                                         <b>Materi :</b> Svelte <br>
                                         <b>Tempat :</b> Algo Coffee & Snacks, Jl Emmy Saelan III (No.70)<br>
                                     </p>
@@ -148,7 +148,7 @@
                                             class="ni ni-calendar-grid-58 mr-2"></i> <b>Kamis,
                                             10 Oktober 2024</b> 08:00 WITA - Selesai</button>
                                     <br><br>
-                                    <span>Informasi lebih lanjut Hubungi <a href="https://wa.me/62895605378736">Fikri
+                                    <span>Informasi lebih lanjut Hubungi <a href="https://api.whatsapp.com/send/?phone=62895605378736&text=assalamualaikum&type=phone_number&app_absent=0">Fikri
                                             Haekal</a></span>
                                 </div>
                                 <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel"
@@ -243,10 +243,7 @@
                                                     Follow</label>
                                             </div>
                                         </div>
-
                                     </div>
-
-
                                     <div class="text-center">
                                         <button type="submit" class="btn btn-primary my-4">Kirim</button>
                                     </div>
