--- a/pendaftar.html
+++ b/pendaftar.html
@@ -217,7 +217,7 @@
                                             10 Agustus 2024</b> 08:00 WITA -
                                         Selesai</button>
                                         <br><br>
-                                        <span>Informasi lebih lanjut Hubungi <a href="https://api.whatsapp.com/send/?phone=6285341847801&text=assalamualaikum&type=phone_number&app_absent=0">Syahrul Ramadhan</a></span>
+                                        <span>Informasi lebih lanjut Hubungi <a href="https://api.whatsapp.com/send/?phone=62895605378736&text=assalamualaikum&type=phone_number&app_absent=0">Fikri Haekal</a></span>
                                 </div>
                                 <div class="tab-pane fade" id="tabs-icons-text-2" role="tabpanel"
                                     aria-labelledby="tabs-icons-text-2-tab">
