--- a/formulir.html
+++ b/formulir.html
@@ -146,7 +146,7 @@
 
                                     <button type="button" class="btn btn-outline-default"><i
                                             class="ni ni-calendar-grid-58 mr-2"></i> <b>Kamis,
-                                            10 Oktober 2024</b> 08:00 WITA - Selesai</button>
+                                            10 Oktober 2024</b> 09:00 WITA - Selesai</button>
                                     <br><br>
                                     <span>Informasi lebih lanjut Hubungi <a href="https://api.whatsapp.com/send/?phone=62895605378736&text=assalamualaikum&type=phone_number&app_absent=0">Fikri
                                             Haekal</a></span>
@@ -293,7 +293,7 @@
             <div class="row align-items-center justify-content-md-between">
                 <div class="col-md-6">
                     <div class="copyright">
-                        &copy; 2024 <a href="https://coconut.or.id/" class="disabled">COCONUT Computer Club</a>.
+                        &copy; 2024 <a href="https://coconut.or.id/" class="disabled">COCONUT Computer Club</a>
                     </div>
                 </div>
                 <div class="col-md-6">
