--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-lg-6 text-center">
                 <img src="./assets/img/logo.png" style="width: 120px;" class="img-fluid">
-                <p class="display-4 text-white">COCONUT OPEN CLASS BATCH 3<br><br><sup>Pengenalan Sistem Operasi dan
-                    Praktik Perintah Dasar Linux</sup></p>
+                <p class="display-4 text-white">COCONUT OPEN CLASS BATCH 3<br><br><sup>Svelte</sup></p>
                 <div class="btn-wrapper mt-2">
                   <a href="dokumentasi.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                     <span class="btn-inner--icon"><i class="ni ni-image"></i></span>
