--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-lg-6 text-center">
                 <img src="./assets/img/logo.png" style="width: 120px;" class="img-fluid">
-                <p class="display-4 text-white">COCONUT OPEN CLASS BATCH 3<br><br><sup>Svelte</sup></p>
+                <p class="display-4 text-white">COCONUT OPEN CLASS BATCH 1<br><br><sup>Introduction to Sveltekit: The frontend framework of the future</sup></p>
                 <div class="btn-wrapper mt-2">
-                  <a href="dokumentasi.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
+                  <!-- <a href="dokumentasi.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                     <span class="btn-inner--icon"><i class="ni ni-image"></i></span>
                     <span class="btn-inner--text">Lihat Dokumentasi</span>
-                  </a>
+                  </a> -->
 
                   <a href="./formulir.html" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                     <span class="btn-inner--icon"><i class="ni ni-single-copy-04"></i></span>
@@ -209,35 +209,42 @@
           <div class="col-md-6 mb-5 mb-md-5">
             <div class="card card-lift--hover shadow border-0">
               <a href="#" title="Landing Page">
-                <img src="./assets/img/coc/coc1.png" class="card-img">
+                <img src="./assets/img/coc 2023-2024/coc1.png" class="card-img">
               </a>
             </div>
           </div>
           <div class="col-md-6 mb-5 mb-lg-0">
             <div class="card card-lift--hover shadow border-0">
               <a href="#" title="Profile Page">
-                <img src="./assets/img/coc/seminar1.png" class="card-img">
+                <img src="./assets/img/coc 2023-2024/seminar1.png" class="card-img">
               </a>
             </div>
           </div>
           <div class="col-md-6 mb-5 mb-lg-0">
             <div class="card card-lift--hover shadow border-0">
               <a href="#" title="Profile Page">
-                <img src="./assets/img/coc/coc2.png" class="card-img">
+                <img src="./assets/img/coc 2023-2024/coc2.png" class="card-img">
               </a>
             </div>
           </div>
           <div class="col-md-6 mb-5 mb-lg-0">
             <div class="card card-lift--hover shadow border-0">
               <a href="#" title="Profile Page">
-                <img src="./assets/img/coc/coc3.png" class="card-img">
+                <img src="./assets/img/coc 2023-2024/coc3.png" class="card-img">
               </a>
             </div>
           </div>
           <div class="col-md-6 mt-5 mb-lg-0">
             <div class="card card-lift--hover shadow border-0">
               <a href="#" title="Profile Page">
-                <img src="./assets/img/coc/coc4.jpg" class="card-img">
+                <img src="./assets/img/coc 2023-2024/coc4.jpg" class="card-img">
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 mt-5 mb-lg-0">
+            <div class="card card-lift--hover shadow border-0">
+              <a href="#" title="Profile Page">
+                <img src="./assets/img/coc 2024-2025/Coc1.png" class="card-img">
               </a>
             </div>
           </div>
