--- a/pendaftar.html
+++ b/pendaftar.html
@@ -88,12 +88,8 @@
                         <button type="button" class="btn btn-sm btn-success btn-tooltip" data-toggle="tooltip"
                             data-placement="top" title="" data-container="body" data-animation="true"
                             data-original-title="Pendaftaran Berakhir pada Sabtu, 3 February 2024">COCONUT OPEN CLASS
-                            BATCH 3</button>
-                        <h3 class=" text-white"><span class="text-white display-4">Pengenalan Sistem Operasi dan Praktik
-                                Perintah Dasar Linux
-
-
-                            </span></h3>
+                            BATCH 1</button>
+                        <h3 class=" text-white"><span class="text-white display-4">Introduction to Sveltekit: The frontend framework of the future</span></h3>
                         <!-- <small class="text-uppercase font-weight-bold">Informasi!</small> -->
                     </div>
                     <div class="nav-wrapper">
@@ -134,8 +130,8 @@
 
                                     <br>
                                     <button type="button" class="btn btn-outline-default"><i
-                                            class="ni ni-calendar-grid-58 mr-2"></i> <b>Sabtu,
-                                            10 Agustus 2024</b> 08:00 WITA -
+                                            class="ni ni-calendar-grid-58 mr-2"></i> <b>Jum'at,
+                                            11 Oktober 2024</b> 13:00 WITA -
                                         Selesai</button>
                                     <br><br>
                                     <span>Informasi lebih lanjut Hubungi <a
