--- a/formulir.html
+++ b/formulir.html
@@ -91,7 +91,7 @@
                             data-placement="top" title="" data-container="body" data-animation="true"
                             data-original-title="Pendaftaran Berakhir pada Sabtu, 3 February 2024">COCONUT OPEN CLASS
                             BATCH 1</button>
-                        <h3 class=" text-white"><span class="text-white display-4">Svelte</span></h3>
+                        <h3 class=" text-white"><span class="text-white display-4">Introduction to Sveltekit: The frontend framework of the future</span></h3>
                         <!-- <small class="text-uppercase font-weight-bold">Informasi!</small> -->
                     </div>
 
@@ -121,9 +121,9 @@
                                     aria-labelledby="tabs-icons-text-1-tab">
                                     <p class="description"><b>Tipe :</b> Open Class<br>
                                         <b>Pemateri :</b> Nurman Awaluddin <br>
-                                        <b>Moderator :</b> Andi Citra Ayu Lestari<br>
-                                        <b>Materi :</b> Svelte <br>
-                                        <b>Tempat :</b> Algo Coffee & Snacks, Jl Emmy Saelan III (No.70)<br>
+                                        <b>Moderator :</b> Musdalipa<br>
+                                        <b>Materi :</b> Sveltekit <br>
+                                        <b>Tempat :</b> IndigoHub Makassar<br>
                                     </p>
 
                                     <p class="description"><b>Deskripsi:</b> Bayangkan kamu ingin membangun aplikasi web
@@ -145,8 +145,8 @@
 
 
                                     <button type="button" class="btn btn-outline-default"><i
-                                            class="ni ni-calendar-grid-58 mr-2"></i> <b>Kamis,
-                                            10 Oktober 2024</b> 09:00 WITA - Selesai</button>
+                                            class="ni ni-calendar-grid-58 mr-2"></i> <b>Jum'at,
+                                            11 Oktober 2024</b> 13:00 WITA - Selesai</button>
                                     <br><br>
                                     <span>Informasi lebih lanjut Hubungi <a href="https://api.whatsapp.com/send/?phone=62895605378736&text=assalamualaikum&type=phone_number&app_absent=0">Fikri
                                             Haekal</a></span>
