--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <a class="navbar-brand mr-lg-5" href="./index.html">
         <img src="./assets/img/logococonut.png">
       </a>
-      <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
+      <!-- <button type="button" class="btn btn-sm btn-primary ml-3" data-toggle="tooltip" data-placement="top"
         title="Tooltip on top" data-container="body" data-animation="true"><a href=""
-          class="text-secondary">Dokumentasi</a></button>
+          class="text-secondary">Dokumentasi</a></button> -->
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global"
         aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
