--- a/pendaftar.html
+++ b/pendaftar.html
@@ -121,6 +121,7 @@
                                                 <th class="txt-biru" style="width: 20%;">Nama Lengkap</th>
                                                 <th class="txt-biru" style="width: 20%;">Email</th>
                                                 <th class="txt-biru" style="width: 20%;">No Telepon</th>
+                                                <th class="txt-biru" style="width: 20%;">Framework</th>
                                                 <th class="txt-biru" style="width: 32%;">Bukti Transfer</th>
                                             </tr>
 
