--- a/formulir.html
+++ b/formulir.html
@@ -172,6 +172,12 @@
 
                                     <p class="description">
                                         <b>Pendaftaran Gratis</b><br>
+                                        1. Ilmu Bermanfaat <br>
+                                        2. Relasi <br>
+                                    </p>
+
+                                    <p class="description">
+                                        <b>Pendaftaran Berbayar</b><br>
                                         1. Sertifikat <br>
                                         2. Modul Pembelajaran <br>
                                         3. Ilmu Bermanfaat <br>
@@ -259,9 +265,9 @@
                                     <!-- Info Instagram -->
                                     <br>
                                     <small class="text-uppercase text-muted font-weight">
-                                        Nikmati kesempatan eksklusif untuk mengakses Modul Materi dan Sertifikat secara gratis!
+                                        Jangan lewatkan kesempatan istimewa untuk mendapatkan akses eksklusif ke Modul Materi dan Sertifikat!
                                         <br><br>
-                                        Cukup upload bukti follow Instagram @coconutdotorg untuk mendapatkan akses penuh.
+                                        Hanya dengan membayar Rp 15.000 ke rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari, dapatkan akses penuh sekarang juga! Jangan sampai ketinggalan!
                                     </small>
                                 
                                     <!-- Upload Bukti Follow -->
@@ -269,7 +275,7 @@
                                         <div class="input-group input-group-alternative">
                                             <div class="custom-file">
                                                 <input type="file" class="custom-file-input" id="gambarInput" name="file" accept=".jpeg, .jpg, .png">
-                                                <label class="custom-file-label" for="gambarInput">Upload Bukti Follow</label>
+                                                <label class="custom-file-label" for="gambarInput">Upload Bukti Transfer</label>
                                             </div>
                                         </div>
                                     </div>
