--- a/pendaftar.html
+++ b/pendaftar.html
@@ -158,20 +158,19 @@
                                 </div>
                                 <div class="tab-pane fade" id="tabs-icons-text-3" role="tabpanel"
                                     aria-labelledby="tabs-icons-text-3-tab">
-                                    <!-- <p class="description">E-CERTIFICATE <br>ILMU BERMANFAAT <br>RELASI
-                                    </p> -->
+
+                                    <p class="description">
+                                        <b>Pendaftaran Gratis</b><br>
+                                        1. Ilmu Bermanfaat <br>
+                                        2. Relasi <br>
+                                    </p>
+
                                     <p class="description">
                                         <b>Pendaftaran Berbayar</b><br>
                                         1. Sertifikat <br>
                                         2. Modul Pembelajaran <br>
                                         3. Ilmu Bermanfaat <br>
                                         4. Relasi <br>
-                                        5. Konsumsi <br>
-                                        <br>
-                                        <b>Pendaftaran Gratis</b><br>
-                                        1. Ilmu Bermanfaat <br>
-                                        2. Relasi <br>
-                                        3. Konsumsi <br>
                                     </p>
                                 </div>
                             </div>
