--- a/formulir.html
+++ b/formulir.html
@@ -265,9 +265,9 @@
                                     <!-- Info Instagram -->
                                     <br>
                                     <small class="text-uppercase text-muted font-weight">
-                                        Jangan lewatkan kesempatan istimewa untuk mendapatkan akses eksklusif ke Modul Materi dan Sertifikat!
+                                        Kegiatan ini sepenuhnya gratis dan tidak dipungut biaya. Namun, jika kamu ingin mendapatkan sertifikat dan modul, kamu dapat melakukan pembayaran sebesar Rp15.000. Jika tidak, cukup upload bukti bahwa kamu telah mengikuti akun Instagram Coconut.
                                         <br><br>
-                                        Hanya dengan membayar Rp 15.000 ke rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari, dapatkan akses penuh sekarang juga! Jangan sampai ketinggalan!
+                                       rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari
                                     </small>
                                 
                                     <!-- Upload Bukti Follow -->
