--- a/formulir.html
+++ b/formulir.html
@@ -265,9 +265,9 @@
                                     <!-- Info Instagram -->
                                     <br>
                                     <small class="text-uppercase text-muted font-weight">
-                                        Kegiatan ini sepenuhnya gratis dan tidak dipungut biaya. Namun, jika kamu ingin mendapatkan sertifikat dan modul, kamu dapat melakukan pembayaran sebesar Rp15.000. Jika tidak, cukup upload bukti bahwa kamu telah mengikuti akun Instagram Coconut.
+                                        Pendaftaran kegiatan ini benar-benar gratis! Namun, jika ingin menerima sertifikat dan modul pembelajaran eksklusif, cukup dengan membayar Rp15.000 ke rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari dan mengunggah bukti transfer. Jika tidak, cukup unggah bukti bahwa kamu sudah mengikuti akun Instagram kami di Coconut.
                                         <br><br>
-                                       rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari
+                                        Mudah, bukan? Ayo gabung dan nikmati manfaatnya bersama kami!
                                     </small>
                                 
                                     <!-- Upload Bukti Follow -->
