--- a/formulir.html
+++ b/formulir.html
@@ -265,7 +265,7 @@
                                     <!-- Info Instagram -->
                                     <br>
                                     <small class="text-uppercase text-muted font-weight">
-                                        Pendaftaran kegiatan ini benar-benar gratis! Namun, jika ingin menerima sertifikat dan modul pembelajaran eksklusif, cukup dengan membayar Rp15.000 ke rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari dan mengunggah bukti transfer. Jika tidak, cukup unggah bukti bahwa kamu sudah mengikuti akun Instagram kami di Coconut.
+                                        Pendaftaran kegiatan ini benar-benar gratis! Namun, jika ingin menerima sertifikat dan modul pembelajaran eksklusif, cukup dengan membayar Rp15.000 ke rekening BRI 4955 0104 7507 535 A.N. Andi Citra Ayu Lestari dan mengunggah bukti transfer. Jika tidak, cukup unggah bukti bahwa kamu sudah mengikuti akun Instagram kami @coconutdotorg.
                                         <br><br>
                                         Mudah, bukan? Ayo gabung dan nikmati manfaatnya bersama kami!
                                     </small>
