--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <div class="col-md-6 mt-5 mb-lg-0">
             <div class="card card-lift--hover shadow border-0">
               <a href="#" title="Profile Page">
-                <img src="./assets/img/coc 2024-2025/Coc1.png" class="card-img">
+                <img src="./assets/img/coc 2024-2025/Coc1.jpg" class="card-img">
               </a>
             </div>
           </div>
